--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+.container{
+  border:#282c34;
+  width: 100%;
+  height:100px;
+  background-color: yellowgreen;
+  margin:10px;
+  text-align: center;
+  font-size: 15px;
+  padding-top: 50px;
+}
